<resources>
    <string name="app_name">animation_samples</string>
    <string name="Sample">Sample</string>
    <string name="AnimationNothing">AnimationNothing</string>
    <string name="NavigationSlide">NavigationSlide</string>
    <string name="NavigationUnique">NavigationUnique</string>
    <string name="Transition">Transition</string>
    <string name="TransitionSharedElement">TransitionSharedElement</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="transition_name_a">transition_name_a</string>
    <string name="transition_name_b">transition_name_b</string>
    <string name="transition_name_c">transition_name_c</string>
    <string name="transition_name_item">transition_name_item</string>
</resources>